# api/docs/swagger.json
@@ -41,6 +41,22 @@
                         "description": "Size",
                         "name": "size",
                         "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "Official",
+                            "Buffer"
+                        ],
+                        "type": "string",
+                        "description": "Category",
+                        "name": "category",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Positions",
+                        "name": "positions",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -165,6 +181,9 @@
         "models.ListMembersResponse": {
             "type": "object",
             "properties": {
+                "count": {
+                    "type": "integer"
+                },
                 "items": {
                     "type": "array",
                     "items": {
